--- a/WebContent/styles/login.css
+++ b/WebContent/styles/login.css
@@ -29,7 +29,8 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+
+#username {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
